# digestify

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
ci/: before_deploy.sh
src/: algos.rs  args.rs  crc32.rs  lib.rs  main.rs  md5.rs  sha1.rs  sha256.rs  sha512.rs
