[package]
name = "digestify"
version = "0.2.0"
authors = ["3van3"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
hex = "0.4.3"
sha2 = "0.9.5"
sha-1 = "0.9.6"
digest = "0.9.0"
md-5 = "0.9.1"
crc32fast = "1.2.1"
