[package]
name = "digestify"
version = "0.2.0"
authors = ["3van3"]
edition = "2018"
description = "Verify a file against a digest/hash/checksum."
homepage = "https://github.com/3nav3/digestify"
repositor = "https://github.com/3nav3/digestify"
license = "AGPL-3.0-only"
keywords = ["digest", "hash", "download"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = "2"
hex = "0.4.3"
sha2 = "0.9.5"
sha-1 = "0.9.6"
digest = "0.9.0"
md-5 = "0.9.1"
crc32fast = "1.2.1"
