[package]
name = "digestify"
version = "0.4.0"
authors = ["evaneaston"]
edition = "2021"
description = "Verify a file against a provided digest/hash/checksum."
homepage = "https://github.com/evaneaston/digestify"
repository = "https://github.com/evaneaston/digestify"
license = "Apache-2.0 OR MIT-0"
keywords = ["digest", "hash", "download"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
sha-1 = "0.10"
digest = "0.10"
md-5 = "0.10"
crc32fast = "1.3"

[profile.release]
lto = "fat"
codegen-units = 1
